--- a/Public/ml/T3a01-Machine-Learning-Index-Leo.html
+++ b/Public/ml/T3a01-Machine-Learning-Index-Leo.html
@@ -1,4 +1,4 @@
-Mchine Learning Index by Leo
+Machine Learning Index by Leo
 
 
 <li><a href="http://rocksetta.com/tensorflowjs/">http://rocksetta.com/tensorflowjs/</a>
@@ -10,6 +10,6 @@ Mchine Learning Index by Leo
 <li><a href="tfjs02-basics-Leo.html">tfjs02-basics-Leo.html</a>
 <li><a href="tfjs03-general-Leo.html">tfjs03-general-Leo.html</a>
 <li><a href="tfjs04-quadratic-Leo.html">tfjs04-quadratic-Leo.html</a>
-<li><a href="...">...</a>
+<li><a href="tfjs05-matrix-math-Leo.html">tfjs05-matrix-math-Leo.html</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
