--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 
 <li><a href="...">...</a>
-<li><a href="...">...</a>
-<li><a href="...">...</a>
+<li><a href="T3A02-javascript-reference-leo.html">T3A02-javascript-reference-leo.html</a>
+<li><a href="T3A03-kitchen-sink-leo.html">T3A03-kitchen-sink-leo.html</a>
 <li><a href="T3A04-web-Leo.html">T3A04-web-Leo.html</a>
-<li><a href="...">...</a>
+<li><a href="T3A05-advanced-webpage-Leo.html">T3A05-advanced-webpage-Leo.html</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
