--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <h1 align=center>index.html by leo</h1>
 
 <li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo</a>
-<li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/Public">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/Public</a>
+<li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/Public">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/public</a>
 
 
-<li><a href="...">...</a>
+<li><a href="ml/T3a01-Machine-Learning-index-Leo.html">ml/T3a01-Machine-Learning-index-Leo.html</a>
 <li><a href="T3A02-javascript-reference-leo.html">T3A02-javascript-reference-leo.html</a>
 <li><a href="T3A03-kitchen-sink-leo.html">T3A03-kitchen-sink-leo.html</a>
 <li><a href="T3A04-web-Leo.html">T3A04-web-Leo.html</a>
