--- a/public/T3A03-kitchen-sink-leo.html
+++ b/public/T3A03-kitchen-sink-leo.html
@@ -1,50 +1,35 @@
-
 <script>
 
-// 5. FUNCTIONS:
 function myRunFunction(){
-    document.getElementById('myDiv01').innerHTML += '<br>myRunFunction running'
+  document.getElementById('myDiv01').innerHTML += '<br>myRunFunction running'
 }
 
 </script>
 
-<h1 align=center>T3A03-kitchen-sink-Leo.html</h1>
-
+<h1 align=center>T3A03-Kitchen-Sink.Leo.html</h1>
 <input type="text" id="myText01" value="5" ><br><br>
 
-<input type="button" value="kitchen-sink" onMouseover="{           // 8. EVENTS: onMouseover
+<input type="button" value="Kitchen-Sink" onMouseover="{
+  document.getElementById('myDiv01').innerHTML = document.getElementById('myText01').value 
 
-  // 1. OUTPUT = INPUT: using 9. CLASSES: from the web Browser
-document.getElementByiD('myDiv01').innerHTML = document.getElementByiD('myText01').value
-
-  // 4.DECISIONS: if statement
 if (isNaN(document.getElementById('myText01').value)){
-document.getElementById('myText01").value = 1
-}
+  document.getElementById('myText01').value = 1
 
-// 3. LOOPS: for loop
-for (let myLoop = 0; myLoop < document.getElementById('myText01").value; my Loop++){
-   
-  // FUNCTIONS: see script tag at top of program
+}
+for (let myLoop= 0; myLoop < document.getElementById('myText01').value; myLoop++){
   myRunFunction()
 }
 
-// 2.VARIABLES:
-myX = document.getElementByiD('myText01').value
-document.getElementByiD('myDiv01').innerHTML += '<br><br> myX variable: ' + myX
+myX = document.getElementById('myText01').value
+document.getElementById('myDiv01').innerHTML +='<br><br> myX variable: ' + myX
 
-// 6. ARRAYS:
-myArray = new Array(myX)
+myArray = new Array(myX) 
 myArray[0] = myX * 1 + 10
 myArray[1] = myX * 6
-document.getElementById('myDiv01').innerHTML += '<br> myArray contains: ' + my Array
+document.getElementById('myDiv01').innerHTML += '<br> myArray contains: ' + myArray
 
-// 7. OBJECTS:
-myObj = {myNum : 6, myName : 'Leo'}
-document.getElementById('myDiv01').innerHTML += '<br>myObj contains: ' + myObj.myName + ', '+ myObj.myNum
+myObj = { myNum : 6, myName : 'Leo'}
+document.getElementById('myDiv01').innerHTML += '<br> myObj contains: ' + myObj.myName + ', '+ myObj.myNum
 
 }"><br><br>
-
-<div id='myDiv01'>...</div><br>
-
-
+<div id="myDiv01">...</div><br>
