--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <li><a href="T3A03-kitchen-sink-leo.html">T3A03-kitchen-sink-leo.html</a>
 <li><a href="T3A04-web-Leo.html">T3A04-web-Leo.html</a>
 <li><a href="T3A05-advanced-webpage-Leo.html">T3A05-advanced-webpage-Leo.html</a>
-<li><a href="...">...</a>
+<li><a href="T3A06-input-output-function-Leo.html">T3A06-input-output-function-Leo.html</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
