--- a/public/ml/T3a01-Machine-Learning-Index-Leo.html
+++ b/public/ml/T3a01-Machine-Learning-Index-Leo.html
@@ -7,9 +7,9 @@ Machine Learning Index by Leo
 <li><a href="21keras-integers-Leo.html">21keras-integers-Leo.html</a>
 <li><a href="22keras-decimal-Leo.html">22keras-decimal-Leo.html</a>
 <li><a href="24keras-one-hot-Leo.html">24keras-one-hot-Leo.html</a>
-<li><a href="tfjs02-basics-Leo.html">tfjs02-basics-Leo.html</a>
-<li><a href="tfjs03-general-Leo.html">tfjs03-general-Leo.html</a>
-<li><a href="tfjs04-quadratic-Leo.html">tfjs04-quadratic-Leo.html</a>
+<li><a href="23keras-digital-Leo.html">23keras-digital-Leo.html</a>
+<li><a href="26keras-small-image-Leo.html">26keras-small-image-Leo.html</a>
+<li><a href="27keras-medium-image-Leo.html">27keras-medium-image-Leo.html</a>
 <li><a href="tfjs05-matrix-math-Leo.html">tfjs05-matrix-math-Leo.html</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
