--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <li><a href="T3A06-input-output-function-Leo.html">T3A06-input-output-function-Leo.html</a>
 <li><a href="T3A07-Decisions-Leo.html">T3A07-Decisions-Leo.html</a>
 <li><a href="T3A08-Loops-Leo.html">T3A08-Loops-Leo.html</a>
-<li><a href="...">...</a>
-<li><a href="...">...</a>
+<li><a href="T3A09-Var-Leo.html">T3A09-Var-Leo.html</a>
+<li><a href="T3A10-Arrays-Leo.html">T3A10-Arrays-Leo.html</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
