--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
 
 <li><a href="ml/T3a01-Machine-Learning-index-Leo.html">T3a01-Machine-Learning-index-Leo.html</a>
-<li><a href="T3A02-javascript-reference-leo(remark please).html">T3A02-javascript-reference-leo(remark please).html</a>
+<li><a href="T3A02-javascript-reference-leo.html">T3A02-javascript-reference-leo.html</a>
 <li><a href="T3A03-kitchen-sink-leo.html">T3A03-kitchen-sink-leo.html</a>
 <li><a href="T3A04-web-Leo.html">T3A04-web-Leo.html</a>
 <li><a href="T3A05-advanced-webpage-Leo.html">T3A05-advanced-webpage-Leo.html</a>
