--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo</a>
 <li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/Public">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/public</a>
 
+<h2 align=center>Please remark T3A02, T3A03, T3A06, T3A07, and T3A08 </h2>
+ 
 
 <li><a href="ml/T3a01-Machine-Learning-index-Leo.html">T3a01-Machine-Learning-index-Leo.html</a>
 <li><a href="T3A02-javascript-reference-leo.html">T3A02-javascript-reference-leo.html</a>
