--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,5 @@
 <li><a href="T3A08-Loops-Leo.html">T3A08-Loops-Leo.html</a>
 <li><a href="T3A09-Var-Leo.html">T3A09-Var-Leo.html</a>
 <li><a href="T3A10-Arrays-Leo.html">T3A10-Arrays-Leo.html</a>
-<li><a href="...">...</a>
+<li><a href="T3A11-Objects-Leo.html">T3A11-Objects-Leo.html</a>
 <li><a href="...">...</a>
