--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <li><a href="T3A10-Arrays-Leo.html">T3A10-Arrays-Leo.html</a>
 <li><a href="T3A11-Objects-Leo.html">T3A11-Objects-Leo.html</a>
 <li><a href="T3A12-Function-Pass-Leo.html">T3A12-Function-Pass-Leo.html</a>
-<li><a href="...">...</a>
+<li><a href="T3A13-Loopcount-Leo.html">T3A13-Loopcount-Leo.html</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
