--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo</a>
 <li><a href="https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/Public">https://github.com/Leo-Lee2002/Game-Dev-2020-Leo/public</a>
 
-<h2 align=center>Please remark T3A02, T3A03, T3A06, T3A07, and T3A08 </h2>
+ <h2 align=center>Please remark <strike>T3A02, T3A03, T3A06, T3A07, and T3A08</strike> Done by Mr. Ellis </h2>
+ 
+ <font color=red>Please save the T4-final-level1-leo.html file and link to it from here</font>
  
 
 <li><a href="ml/T3a01-Machine-Learning-Index-Leo.html">T3a01-Machine-Learning-Index-Leo.html</a>
